jlamontSC-test/src/objects/Mobile_Integration_Request__c.object
<CustomObject>
    <description>Mobile Integration Request is used to identify constituents whose data may be sent from CORE to Mobile Commons because those constituents have opted-in to receive text messages (sent from Mobile Commons).  The request is generated in response to either 1) a constituent having filled out a form that includes phone number with the understanding that they are opting into receiving text messages, or 2) relevant constituent data changes for a constituent who has already opted-in.</description>
    <fields>
        <fullName>Advocacy_Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the advocacy action from which the constituent opted-in to receive text messages (if this request came from an advocacy action). It is used to find the related batch upload record if one exists.</description>
        <inlineHelpText>May be blank (if request was created from an event registration or contact instead of from an advocacy action).</inlineHelpText>
        <label>Advocacy Action</label>
        <referenceTo>kweos__EOCS_Data__c</referenceTo>
        <relationshipLabel>Mobile Integration Requests</relationshipLabel>
        <relationshipName>Mobile_Integration_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The constituent who has opted-in to receive text messages.  This is a link to their constituent data.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Mobile Integration Requests</relationshipLabel>
        <relationshipName>Mobile_Integration_Requests</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Registration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the event registration from which the constituent opted-in to receive text messages (if this request came from an event registration). It is used to find the related batch upload record if one exists.</description>
        <inlineHelpText>This field may be blank if an integration request came from an advocacy action or a contact.</inlineHelpText>
        <label>Event Registration</label>
        <referenceTo>Event_Registration__c</referenceTo>
        <relationshipLabel>Mobile Integration Requests</relationshipLabel>
        <relationshipName>Mobile_Integration_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Timestamp__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mobile_Opt_In_Status__c</fullName>
        <description>The status returned by Mobile Commons  in response to the profile_update POST from CORE.</description>
        <label>Mobile Opt-In Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opt_In_Phone_matches_Contact_Phone__c</fullName>
        <description>Indicates that the phone used to opt-in (may come from advocacy action form) matches the preferred phone on the Contact.</description>
        <formula>Phone__c == Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opt-In Phone matches Contact Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opt_In_Source__c</fullName>
        <description>These are the objects that can generate an mobile integration request.</description>
        <label>Integration Request Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advocacy Action</fullName>
                </value>
                <value>
                    <fullName>Event Registration</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Key__c</fullName>
        <description>Opted-in phone number.  This is the phone a constituent provided on a form (e.g. advocacy action, event response) when they opted-into receiving text messages, or it is the primary phone number of a constituent who has already opted-in and Mobile Subscriber = true on the contact object.</description>
        <externalId>true</externalId>
        <label>Phone Key</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Opted-in phone number.  This is the phone a constituent provided on a form (e.g. advocacy action, event response) when they opted-into receiving text messages, or it is the primary phone number of a constituent who has already opted-in and Mobile Subscriber = true on the contact object.</description>
        <label>Phone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sent_to_Mobile_Commons__c</fullName>
        <description>The date that this Mobile Integration Request was processed and sent to Mobile Commons.</description>
        <label>Sent to Mobile Commons</label>
        <type>DateTime</type>
    </fields>
    <label>Mobile Integration Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Phone__c</columns>
        <columns>Opt_In_Phone_matches_Contact_Phone__c</columns>
        <columns>Sent_to_Mobile_Commons__c</columns>
        <columns>Last_Modified_Timestamp__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterOrEqual</operation>
            <value>2/1/2017 12:00 AM</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MIR-{0}</displayFormat>
        <label>Mobile Integration Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mobile Integration Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>